<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".ui.view.fragment.DetilTransaksiFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detil_transaksi"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_mid_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_mid_horizontal2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="350dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.76" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/guideline_mid_horizontal"
            app:layout_constraintEnd_toEndOf="@id/guideline_mid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/tanggal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textStyle="bold"
                android:text="@string/pesanan" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_mid_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="@+id/guideline_top">

            <TextView
                android:id="@+id/tv_tanggal_transaksi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                tools:text="2024-12-28 12:00:34 WIB"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_mid"
            app:layout_constraintTop_toTopOf="@id/guideline_mid_horizontal"
            app:layout_constraintBottom_toBottomOf="@id/guideline_mid_horizontal2">

            <TextView
                android:id="@+id/tv_nama_pesanan_transaksi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textStyle="bold"
                android:padding="8dp"
                tools:text="Coffe \nCoffe \nLatte \nIce tea \nSate"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="@id/guideline_mid"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline_mid_horizontal"
            app:layout_constraintBottom_toBottomOf="@id/guideline_mid_horizontal2">

            <TextView
                android:id="@+id/tv_total_transaksi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textStyle="bold"
                android:text=""
                tools:text="Rp 50.000,00"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_mid"
            app:layout_constraintTop_toTopOf="@id/guideline_mid_horizontal2"
            app:layout_constraintBottom_toBottomOf="@id/guideline_bottom">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_harga"
                android:padding="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bayar"
                android:padding="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_pesanan"
                android:padding="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_total"
                android:visibility="gone"
                android:padding="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:visibility="gone"
                android:padding="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kembalian"
                android:padding="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="@id/guideline_mid_horizontal2"
            app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
            app:layout_constraintStart_toStartOf="@id/guideline_mid"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tv_total_harga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textStyle="bold"
                android:text=""
                tools:text="Rp. 125.000,00"/>

            <TextView
                android:id="@+id/tv_jumlah_bayar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:padding="8dp"
                tools:text="Rp. 100000"/>

            <TextView
                android:id="@+id/tv_jumlah_pesanan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:padding="8dp"
                android:textStyle="bold"
                tools:text="7"/>

            <TextView
                android:id="@+id/tv_nominal_kembalian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:padding="8dp"
                android:textStyle="bold"
                tools:text="Rp. 50.000,00"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:padding="8dp"
                android:textStyle="bold"
                android:visibility="gone"
                tools:text="Rp. 50.000,00"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:padding="8dp"
                android:textStyle="bold"
                android:visibility="gone"
                tools:text="Rp. 10.000,00"/>

        </LinearLayout>




        <TextView
            android:id="@+id/btn_bayar_transaksi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="8dp"
            android:textColor="@color/white"
            android:background="@color/gojek_blue"
            android:text="@string/bayar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_bottom"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>