<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="220dp">

        <ImageView
            android:id="@+id/iv_menu_makanan"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/food_cover" />

        <TextView
            android:id="@+id/tv_menu_nama_makanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text=""
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_menu_makanan"
            tools:text="Soto Babad Asli Madura" />

        <TextView
            android:id="@+id/tv_menu_harga_makanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text=""
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_menu_nama_makanan"
            tools:text="Rp. 10000" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_menu_harga_makanan">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/btn_kurang_menu_makanan"
                    android:layout_width="32sp"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/reduced"
                    android:textAlignment="center"
                    android:textColor="@color/gofood_red"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tv_jumlah_pesanan_makanan"
                    android:layout_width="32sp"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_tambah_menu_minuman"
                    app:layout_constraintStart_toEndOf="@+id/btn_kurang_menu_minuman"
                    tools:text="0" />

                <TextView
                    android:id="@+id/btn_tambah_menu_minuman"
                    android:layout_width="32sp"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/add"
                    android:textAlignment="center"
                    android:textColor="@color/gofood_red"
                    app:layout_constraintEnd_toEndOf="parent" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

<!--        <TextView-->
<!--            android:id="@+id/btn_kurang_menu_makanan"-->
<!--            android:layout_width="75dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:text="@string/reduced"-->
<!--            android:clickable="true"-->
<!--            android:textColor="@color/white"-->
<!--            android:textAlignment="center"-->
<!--            android:gravity="center"-->
<!--            android:background="@color/gofood_red"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/tv_menu_harga_makanan"/>-->


<!--        <TextView-->
<!--            android:id="@+id/btn_tambah_menu_makanan"-->
<!--            android:layout_width="75dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:text="@string/add"-->
<!--            android:clickable="true"-->
<!--            android:textColor="@color/white"-->
<!--            android:textAlignment="center"-->
<!--            android:gravity="center"-->
<!--            android:background="@color/gojek_blue"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/tv_menu_harga_makanan"/>-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>